2022-02-04  David Declerck <david.declerck@ocamlpro.com>

	* config, cobc/cobc.h: add support for GCOS 7 dialect (Bull), both
	  a strict variant (config/gcos-strict.conf) and a variant with
	  GNUCobol extensions (config/gcos.conf)

2022-03-29  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: dropped obsolete AC_PROG_CC_STD, AC_HEADER_STDC as
          already included in AC_PROG_CC and assumed otherwise

2022-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: targets to create binary distributions

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: revert change 2019-06-05 - all header files that are included
	  from the system use <include.h>, "local.h" is used otherwise with the
	  exceptions of to-be-installed headers which include files that have a
	  local reference to each other after installation (common.h + 
	  and exceptions.def)

2021-11-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: use `dnl` comments in all places that are not intended be
	  included in the generated configure script, fixing spurious warnings
	  about potentially undefined macros; 
	* configure.ac: copyright notice in generated script
	* m4/libtool.m4: updated from libtool, with additions for netbsd from Debian

2021-10-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: requiring libtool 2.2 via LT_PREREQ,
	  specify use of ar-lib for systems that may need it via AM_PROG_AR
	* configure.ac: moved sys/time.h to optional headers
	* configure.ac: check for more BDB library names (Win32 common names)

2021-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: dropped portibility warnings for automake because
	  of false-positives, only define specific names we want instead
	  "everything that automake has"
	* configure.ac: explicit check for bison/flex
	* m4/ax_prog_bison.m4, m4/ax_prog_flex.m4: new files from the
	  GNU Autoconf Archive

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>
